# redact

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile.ner  README.md
.github/workflows/: release.yml
artifacts/eng-67/: STATUS.md  diff.patch
crates/redact-api/src/: handlers.rs  lib.rs  main.rs  models.rs  routes.rs  server.rs
crates/redact-cli/src/: main.rs
crates/redact-core/: Cargo.toml
crates/redact-core/src/: lib.rs
crates/redact-core/src/anonymizers/: encrypt.rs  hash.rs  mask.rs  mod.rs  registry.rs  replace.rs
crates/redact-core/src/engine/: mod.rs
crates/redact-core/src/policy/: mod.rs
crates/redact-core/src/recognizers/: mod.rs  pattern.rs  registry.rs  validation.rs
crates/redact-core/src/types/: entity.rs  mod.rs  result.rs
crates/redact-core/tests/: yaml_pattern_loading.rs
crates/redact-wasm/src/: lib.rs
docs/: yaml-patterns.md
docs/security/: dependabot-review-2026-05-30.md
examples/: yaml_patterns_demo.sh
patterns/: README.md
